fix input overlap

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,8 @@
   &__settings {
     padding: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     align-items: baseline;
     gap: 20px;
     margin-top: 10px;
